feature/task: add get all tasks endpoint
